--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,6 @@ APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -21,11 +20,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=example_app
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=rigging
+DB_USERNAME=php
+DB_PASSWORD=secret
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -43,7 +42,7 @@ CACHE_STORE=database
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=cache
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -62,4 +61,4 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-VITE_APP_NAME="${APP_NAME}"
+VITE_APP_NAME="${APP_NAME}
